updating cpythonscriptexecutor